--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,97 @@
+/* Universal CSS */
+:root {
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+
+  /* Colors */
+
+  --lightI: #ffffff;
+  --lightII: #eeeeee;
+  --lightIII: #dfdfdf;
+  --lightIV: #ededed;
+
+  --guestBg: #523f28;
+  --officerBg: #1e4334;
+  --non-memberBg: #1a3e4d;
+  --memberBg: #2c3259;
+
+  --guestFg: #e29d36;
+  --officerFg: #2eaf77;
+  --non-memberFg: #239ed2;
+  --memberFg: #7579f0;
+
+  --background: #08141a;
+  --grey: #4d4d4d;
+  --light: #5b5b5b;
+  --accent: #5c9dff;
+
+  /* Font sizes (https://utopia.fyi/type/calculator?c=320,13.5,1.025,1920,15,1.025,5,5,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12) */
+
+  --step--5: clamp(0.7456rem, 0.729rem + 0.0831vw, 0.8288rem);
+  --step--4: clamp(0.7644rem, 0.7474rem + 0.085vw, 0.8494rem);
+  --step--3: clamp(0.7838rem, 0.7664rem + 0.0869vw, 0.8706rem);
+  --step--2: clamp(0.8031rem, 0.7853rem + 0.0894vw, 0.8925rem);
+  --step--1: clamp(0.8231rem, 0.8049rem + 0.0913vw, 0.9144rem);
+  --step-0: clamp(0.8438rem, 0.825rem + 0.0938vw, 0.9375rem);
+  --step-1: clamp(0.865rem, 0.8459rem + 0.0956vw, 0.9606rem);
+  --step-2: clamp(0.8863rem, 0.8665rem + 0.0988vw, 0.985rem);
+  --step-3: clamp(0.9088rem, 0.8886rem + 0.1006vw, 1.0094rem);
+  --step-4: clamp(0.9313rem, 0.9105rem + 0.1038vw, 1.035rem);
+  --step-5: clamp(0.9544rem, 0.9331rem + 0.1063vw, 1.0606rem);
+
+  font-size: var(--step-0);
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--lightI);
+  color: #333;
+}
+
+html,body{
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #333; 
+}
+
+ /* Button styles */
+button {
+  background-color: #d32f2f; /* Red background */
+  color: #fff; /* White text */
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px; /* Rounded corners */
+  cursor: pointer; /* Pointer cursor on hover */
+  transition: background-color 0.3s ease; /* Smooth transition for background color */
+}
+
+button:hover {
+  background-color: #b71c1c; /* Darker shade of red on hover */
+}
+
+form {
+  width: 50%;
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input[type="date"],
+select,input[type="text"],input[type="number"],input[type="datetime-local"],input[type="date"]{
+  width: calc(100% - 16px); /* Subtract padding and border width */
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 code {
