--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,36 +1,61 @@
 .navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: black;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    z-index: 10;
-  }
-  
-  .nav-link {
-    float:none;
-    border-right: 1px solid #bbb;
-  }
-  
-  .nav-link .nav-a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .nav-link .nav-a:hover {
-    background-color: red;
-  }
-  
-  .nav-link:last-child {
-    border-right: none;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  z-index: 10;
+}
+
+.navbar .links {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.nav-link {
+  float: none;
+  border-right: 1px solid #bbb;
+}
+
+.nav-link .nav-a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.nav-link .nav-a:hover {
+  background-color: rgb(172, 172, 172);
+}
+
+.nav-link:last-child {
+  border-right: none;
+}
+
+.logout-link-container {
+  margin-left: auto;
+}
+
+.nav-link .nav-logout-button {
+  background-color: red;
+  color: white;
+  border: none;
+  padding: 14px 16px;
+  cursor: pointer;
+  text-align: center;
+  display: block;
+}
+
+.nav-link .nav-logout-button:hover {
+  background-color: darkred;
+}
