--- a/client/src/components/reports/reports.css
+++ b/client/src/components/reports/reports.css
@@ -1,24 +1,23 @@
 .reports-page {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .report-buttons {
-    margin: 20px 0;
-  }
-  
-  button {
-    margin: 0 10px;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
-  
+  text-align: center;
+  padding: 20px;
+}
+
+.reports-page .report-buttons {
+  margin: 20px 0;
+}
+
+.reports-page button {
+  margin: 0 0px;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.reports-page button:hover {
+  background-color: #45a049;
+}
